v0.1:

+ Added Byzantine Co-Emperor event
+ Added Thessalonica (FES)
+ Added start screen text for Damietta
+ Added start screen text for Rahulids
+ Added Muqti event for Rahulids (so now the "unique type of Iqta' system" actually means something heahehehe)
+ Added events for a Catholic Crusade against an expansionist Byzantium

* Changed Rhomaiokratia's -10% manpower to -25% land forcelimit
* Cleaned up the Foreign Quarter event for Crusader States
* Added Serbian to Prilep's accepted cultures to reflect that Prilep was born out of the Serbian Empire
* Edited bookmark text to actually explain the lore of the mod
* Damietta and Jerusalem are now allies at game start and the KoJ now guarantees Tripoli
* Added cores for Prliep, Karvuna, Velbazhd, and Vidin in Bulgarian and Byzantine land
* Added some Byzantine cores in Rumi land, and some Rumi cores in Byzantine land
* Granted Al Wahat and Jaghbub to Banu Sulaym
* Made Darnah Maghrebi culture
* Reworked some Epirote lore and country history
* Nerf to province 379 (Jerusalem) dev: 30 -> 23
* Nerf to province 1854 (Jaffa) dev: 22 -> 19
* Nerf to province 358 (Alexandria) dev: 21 -> 16
* Buff to province 151 (Constantinople) dev: 31 -> 35
* Nerf to province 4317 (Temenhor) dev: 24 -> 19 
* Nerf to province 4316 (Sagsic) dev: 24 -> 19


v0.0.6:

! This update doesn't have much in it, I mostly needed to fix a bug with the Konstantinos XI events

+ Added unique Rumi government reform

* Fixed Konstantinos XI event chain firing too much. My bad.
* Changed the Reform Bulgarian Empire decision's requirements because apparently you can't change highlighted provinces based on the nation looking at the decision aahhhhh
* Gave province 357 (Darnah) to Ifriqiya

v0.0.5:

+++ Added event chain centered around Konstantinos, heir apparent to the Byzantine Empire!

+ Added institutions file for future use
+ Added ruler for Cilicia (Undead)
+ Added previous rulers for Jerusalem (Undead)