@@ -45,6 +45,8 @@ monarchy = {
 				#damietta_crusader_tier_1_reform_2
 				damietta_rahulid_sultanate_1
 				damietta_rumi_sultanate_1
+				damietta_byzantine_cath_peace
+				damietta_byzantine_cath_war
 			}
 		}
 		hereditary_vs_nobility = {
@@ -58,6 +60,9 @@ monarchy = {
 				khalsa_reform
 				deccani_society_reform
 				mughal_government
+				#Damietta
+				damietta_byz_reform_pronoia
+				damietta_byz_reform_themata
 			}
 		}
 		bureaucracy = {
