@@ -33,6 +33,6 @@
  #Byzhater Decisions
  damietta_request_permission_for_byz_crusade_title:0 "Request Permission for Byzantine Crusade"
  damietta_request_permission_for_byz_crusade_desc:0 "Ask the Pope for permission to launch a Crusade against the heretical Greeks."
- damietta_ruler_has_not_called_for_byz_crusade.tt:0 "Nation has not called for a Byzantine Crusade in the past §Y15 years.§!"
- damietta_byz_not_lost_crusade_recently.tt:0 "Byzantium has not been the target of a crusade in the last §Y25 years.§!"
+ damietta_ruler_has_not_called_for_byz_crusade.tt:0 "Nation has not called for a Byzantine Crusade in the past §Y25 years.§!"
+ damietta_byz_not_lost_crusade_recently.tt:0 "Byzantium has not been the target of a crusade in the last §Y15 years.§!"
  damietta_ruler_hates_byz.tt:0 "Pope will consider our request."
